feat(image-gen): complete basic image gen with flux nim
